--- a/MyProd/helm_values/peer.yaml
+++ b/MyProd/helm_values/peer.yaml
@@ -6,6 +6,16 @@ persistence:
   storageClass: fast
   size: 10Gi
 
+# logging:
+#   level: info
+#   peer: info
+#   cauthdsl: warning
+#   gossip: info
+#   grpc: error
+#   ledger: info
+#   msp: warning
+#   policies: warning
+
 peer:
   databaseType: CouchDB
   couchdbInstance: cdb-peer${PEER_NUM}-org${ORG_NUM}
