--- a/dind/values.yaml
+++ b/dind/values.yaml
@@ -24,7 +24,7 @@ persistence:
   ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
   ##   GKE, AWS & OpenStack)
   ##
-  storageClass: "default"
+  storageClass: ""
   accessMode: ReadWriteOnce
   size: 100Gi
   # existingClaim: ""
