--- a/hlf-peer/templates/configmap--peer.yaml
+++ b/hlf-peer/templates/configmap--peer.yaml
@@ -53,7 +53,7 @@ data:
   CORE_PEER_TLS_CLIENTROOTCAS_FILES: "/var/hyperledger/tls/client/cert/*"
   CORE_PEER_TLS_CLIENTCERT_FILE: "/var/hyperledger/tls/client/pair/tls.crt"
   CORE_PEER_TLS_CLIENTKEY_FILE: "/var/hyperledger/tls/client/pair/tls.key"
-  CORE_VM_ENDPOINT: unix:///host/var/run/docker.sock
+  # CORE_VM_ENDPOINT: unix:///host/var/run/docker.sock
   # CORE_VM_ENDPOINT_DIND: http://docker:2375
   CORE_LEDGER_STATE_STATEDATABASE: {{ .Values.peer.databaseType | quote }}
   # Containers in the same pod share the host
