--- a/MyProd/extra/Storage/Azure-chaincode-pvc.yaml
+++ b/MyProd/extra/Storage/Azure-chaincode-pvc.yaml
@@ -7,5 +7,5 @@ spec:
     - ReadWriteMany
   resources:
     requests:
-      storage: 1Gi
-  storageClassName: azurefile
+      storage: 10Gi
+  storageClassName: rwmany
