--- a/MyProd/extra/chaincode-jobs/Reference/chaincode_upgrade.yaml
+++ b/MyProd/extra/chaincode-jobs/Reference/chaincode_upgrade.yaml
@@ -1,12 +1,12 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: chaincodeinstantiate
+  name: chaincodeupgrade
 spec:
   backoffLimit: 1
   template:
     metadata:
-      name: chaincodeinstantiate
+      name: chaincodeupgrade
     spec:
       restartPolicy: "Never"
       volumes:
@@ -26,26 +26,23 @@ spec:
           defaultMode: 420
           secretName: hlf--peer-org1-adminkey
       containers:
-      - name: chaincodeinstantiate
+      - name: chaincodeupgrade
         image: hyperledger/fabric-tools:1.4
         imagePullPolicy: Always
         command:
           - /bin/sh
           - -c
           - >
-            peer chaincode instantiate -o ord1-hlf-ord.orderers.svc.cluster.local:7050 -C ${CHANNEL_NAME} -n ${CHAINCODE_NAME} -l ${LANGUAGE} -v ${CHAINCODE_VERSION} -c '{"Args":[]}' -P "AND ('Org1MSP.member','Org2MSP.member')"
-        envFrom:
-        - configMapRef:
-            name: chaincode-cm
+            peer chaincode upgrade -o ord1-hlf-ord.orderers.svc.cluster.local:7050 -C ${CHANNEL_NAME} -n ${CHAINCODE_NAME} -l ${LANGUAGE} -v ${CHAINCODE_VERSION} -c '{"Args":[]}' -P "AND ('Org1MSP.member','Org2MSP.member')"
         env:
-        # - name: CHANNEL_NAME
-        #   value: mychannel
-        # - name: LANGUAGE
-        #   value: "node"
-        # - name: CHAINCODE_NAME
-        #   value: "myccnew"
-        # - name: CHAINCODE_VERSION
-        #   value: "1.0.0"
+        - name: CHANNEL_NAME
+          value: mychannel
+        - name: LANGUAGE
+          value: "node"
+        - name: CHAINCODE_NAME
+          value: "mycc"
+        - name: CHAINCODE_VERSION
+          value: "1.0.0"
         - name: FABRIC_CFG_PATH
           value: /etc/hyperledger/fabric
         - name: CORE_PEER_MSPCONFIGPATH
