--- a/MyProd/extra/chaincode-jobs/chaincode_storage.yaml
+++ b/MyProd/extra/chaincode-jobs/chaincode_storage.yaml
@@ -1,24 +1,20 @@
-#https://hostadvice.com/how-to/how-to-use-ftp-to-transfer-files-between-servers-and-local-machines/
-#https://www.hostmysite.com/support/upload/browser-ftp/
-#https://www.tecmint.com/install-ftp-server-in-ubuntu/
----
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: chaincodeftp
+  name: chaincodestorage
   labels:
-    component: chaincodeftp
-    role: ftpserver
+    component: chaincodestorage
+    role: storage-server
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        component: chaincodeftp
-        role: ftpserver
+        component: chaincodestorage
+        role: storage-server
     spec:
       containers:
-      - name: chaincodeftp
+      - name: chaincodestorage
         imagePullPolicy: Always
         image: akhilrajmailbox/ubuntu:16.04
         env:
@@ -28,11 +24,11 @@ spec:
               fieldPath: metadata.namespace
         resources:
           requests:
-            memory: "1Gi"
+            memory: "500Mi"
             cpu: 100m
           limits:
-            memory: "2Gi"
-            cpu: 2
+            memory: "1Gi"
+            cpu: 1
         volumeMounts:
         - mountPath: /shared
           name: sharedvolume
